# f1_digital_twin

./: .gitignore  README.md  pyproject.toml  requirements_cpu.txt  requirements_gpu.txt
configs/: base.yaml  bicycle.yaml
configs/experiments/: .gitkeep
docs/: PHASE_0_ENGINEERING_RULES.md  PHASE_10_GPU_IGNITION.md  PHASE_11_FATAL_MISTAKES.md  PHASE_1_ARCHITECTURE.md  PHASE_2_DEPENDENCIES.md  PHASE_3_CONFIGURATION.md  PHASE_4_SIMULATOR_ABSTRACTION.md  PHASE_5_STATE_REPRESENTATION.md  PHASE_6_WORLD_MODEL.md  PHASE_7_DECISION_CORE.md  PHASE_8_TRAINING_LOOP.md  PHASE_9_EXPLAINABILITY.md
experiments/: .gitkeep
scripts/: observe.py  train.py  validate_config.py
src/: __init__.py
src/analysis/: __init__.py  checkpointing.py  logger.py  metrics.py
src/core/: __init__.py  math_utils.py  physics.py  types.py
src/models/: __init__.py  blocks.py  encoder.py  policy.py  value.py  world_model.py
src/telemetry/: __init__.py  normalization.py  state.py  validation.py
src/training/: __init__.py  buffer.py  ppo.py  rollout.py  trainer.py
tests/: conftest.py
tests/test_core/: test_types.py
tests/test_env/: __init__.py  test_bicycle_env.py  test_stub_env.py
tests/test_integration/: test_full_loop.py
tests/test_models/: test_policy.py  test_world_model.py
tests/test_training/: test_rollout.py
